# tiketnlphub

./: LICENSE.txt  README.md  pyproject.toml  setup.cfg
src/preprocessing/: normalizer.py
src/preprocessing/.ipynb_checkpoints/: cleaner-checkpoint.py
src/tiketnlphub/preprocessing/: cleaner.py  normalizer.py
tests/fixtures/preprocessing/: cleaner.py
tests/fixtures/preprocessing/.ipynb_checkpoints/: cleaner-checkpoint.py  normalizer-checkpoint.py
tests/unit/preprocessing/: test_cleaner.py  test_normalizer.py
tests/unit/processing/.ipynb_checkpoints/: test_cleaner-checkpoint.py  test_normalizer-checkpoint.py
tiketnlphub/preprocessing/: cleaner.py  normalizer.py  re_pattern.py
