[metadata]
name = tiketnlphub
version = 1.0.0
author = PT. Global Tiket Network
author_email = tiket.com
description = tiket.com centralized NLP hub Python package to help developers develop NLP projects
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/codasteroid/basicpkg
project_urls =
    Bug Tracker = https://github.com/codasteroid/basicpkg/-/issues
    repository = https://github.com/codasteroid/basicpkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src